style.css
/* Light mode colors */
:root[color-mode="light"] {

    /* Light background colors */
    --color-background: #F5FBFF;
    --color-background-nav: rgba(245, 251, 255, 0.8);
    --color-background-text: #DEEDF8;
    --color-background-contact-button: #F5FBFF;
    --color-background-landing-page: #F5FBFF;
    --color-background-about-page: #F5FBFF;
    --color-background-find-page: #F5FBFF;
    --color-background-contact-page: #F5FBFF;
    --color-background-diseases-page: #F5FBFF;
    --color-background-footer: #212121;
    --color-background-contact-button-active: #e5f3fd;

    /* Light primary/secondary etc. colors */
    --color-primary-900: #2D4F9F;
    --color-primary-800: #376DBF;
    --color-primary-700: #3D7ED1;
    --color-primary-600: #4490E4;
    --color-primary-300: #76BCF6;
    --color-primary-200: #9ACFF9;

    --color-secondary-900: #0D620B;

    /* Light text colors */
    --color-text-primary: #232A3A; /* 14.34 contrast against FFF */
    --color-text-secondary: #54565D; /* 7.32 contrast against FFF */
    --color-text-hovered: #656A75; /* 4.92 contrast against FFF */
    --color-link-hover: #2D4F9F;
    --color-text-white: #F5F6FA;
    --color-text-white-hovered: #B5B6B9; /* 7.94 contrast against #212121 */

    /* Light component colors */
    --color-arrow: #7C7E82; /* 4.06 contrast against FFF */
    --color-arrow-hovered: #7c7e82b4;
    --color-heart: 	#a6d8a1;

    /* Light colors */
    --color-white: #FFFFFF;
    --color-black: #212121;
}

/* Dark mode colors */
:root[color-mode="dark"] {
    --color-background: #040A17;
}

/* General variables not related to color */
:root {

    /* Font sizes */
    --text-size-footer: 1.6rem;
    --text-size-nav-link-open: 2.4rem;
}

/* TAG STYLING */

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}

body {
    margin: 0;
}

img {
    height: auto;
    max-width: 100%;
}

p {
    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
    font-size: 2rem;
}

h1 {
    margin: 0;
}

h2 {
    margin: 0;
}

h3 {
    margin: 0;
}

a {
    text-decoration: none;
}

/* CLASS STYLING */

/* Layout styles */

.navbar {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
    width: 80%;
    max-width: 150rem;
}

.navbar-div {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    background-color: var(--color-background-nav);
    position: fixed;
    top: 0;
    z-index: 3;
    backdrop-filter: blur(8px);
}

.full-page {
    width: 80%;
    max-width: 150rem;
}

.full-page-background {
    width: 100%;
    display: flex;
    justify-content: center;
}

.layout {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    position: relative;
}

.full-height {
    height: 100vh;
}

.diseases-layout {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
}

#diseases-page.full-page-background {
    overflow: hidden;
    padding-bottom: 0.3rem;
}

.disease-div {
    display: grid;
    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
    column-gap: 6.4rem;
    row-gap: 6.4rem;
    position: relative;
}

.align-start {
    align-items: start;
}

.align-center {
    align-items: center;
}

.left-side {
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-start;
    z-index: 2;
}

.right-side {
    display: flex;
    flex-flow: column nowrap;
    align-items: flex-end;
}

.center-items {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
}

.nav-div {
    display: flex;
    flex-flow: row nowrap;
    justify-self: end;
}

.footer-contact-info-div {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-start;
}

.footer-attribution-wrapper {
    display: flex;
    justify-content: flex-end;
}

.footer-attribution-div {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-start;
}

.contact-subheading {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
}

.contact-subheading .section-subheading {
    border-bottom: 4px solid var(--color-text-secondary);
}

.contact-subheading svg {
    stroke: var(--color-primary-900);
    transition: stroke 0.2s ease;
}

.contact-subheading:hover .section-subheading {
    color: var(--color-text-hovered);
    border-bottom: 4px solid var(--color-background);
}

.contact-subheading:hover svg {
    stroke: var(--color-primary-600);
}

.column-gap-small {
    column-gap: 1.6rem;
}

.column-gap-medium {
    column-gap: 3.2rem;
}

.column-gap-large {
    column-gap: 6.4rem;
}

.column-gap-very-large {
    column-gap: 12.8rem;
}

.margin-top-none {
    margin-top: 0;
}

.margin-top-very-large {
    margin-top: 12.8rem;
}

.margin-right-mini {
    margin-right: 0.4rem;
}

.margin-right-small {
    margin-right: 1.6rem;
}

.margin-right-medium {
    margin-right: 3.2rem;
}

.margin-right-large {
    margin-right: 6.4rem;
}

.margin-bottom-none {
    margin-bottom: 0;
}

.margin-bottom-very-small {
    margin-bottom: 0.8rem;
}

.margin-bottom-small {
    margin-bottom: 1.6rem;
}

.margin-bottom-medium {
    margin-bottom: 3.2rem;
}

.margin-bottom-large {
    margin-bottom: 6.4rem;
}

.margin-bottom-very-large {
    margin-bottom: 12.8rem;
}

.margin-bottom-massive {
    margin-bottom: 25.6rem;
}

.margin-bottom-logo {
    margin-bottom: 18rem;
}

.margin-left-mini {
    margin-left: 0.4rem;
}

.margin-left-very-small {
    margin-left: 0.8rem;
}

.padding-top-mini {
    padding-top: 0.3rem;
}

.padding-top-telephone {
    padding-top: 0.2rem;
}

.padding-top-small {
    padding-top: 1.6rem;
}

.padding-top-medium {
    padding-top: 3.2rem;
}

.padding-bottom-small {
    padding-bottom: 1.6rem;
}

.padding-bottom-medium {
    padding-bottom: 3.2rem;
}

.border-radius-medium {
    border-radius: 20px;
}

.inline {
    display: inline;
}
/* ... */

